[tool.poetry]
name = "code-with-style"
version = "0.1.0"
description = ""
authors = ["Grey Rook GmbH <info@greyrook.com>"]

[tool.poetry.dependencies]
python = "^3.7"
mkdocs = "^1.1.2"
mkdocs-material = "^7.0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
